--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -17,6 +17,25 @@
 {% block body %}
 {# Mostrar contenido de una variable {{ dump() }} #}
 
+<div class="modal fade" id="modalDialog" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="modalLabel">{% block modallabel %}Mensaje{% endblock %}</h4></div>
+      <div class="modal-body">
+         {% block modalbody %}
+         <p>Mensaje</p>
+         {% endblock %}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">{% block modaldismiss %}Cancelar{% endblock %}</button>
+        {% block modalprimary %}<button type="button" class="btn btn-primary">Aceptar</button>{% endblock %}
+      </div>
+    </div>
+  </div>
+</div>
+
    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
          <div class="navbar-header">
