--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -51,7 +51,7 @@
             <ul class="nav navbar-nav">
                {% block navbar %}
                <li><a class="inactive">Atletas</a></li>
-               <li><a href="./competiciones/">Competiciones</a></li>
+               <li><a href="./competiciones">Competiciones</a></li>
                <li><a class="inactive">Records</a></li>
                <li><a class="inactive">Noticias</a></li>
                <li><a class="inactive">Informes</a></li>
