--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -45,9 +45,9 @@
             </tbody>
          </table>
          {% if com.esfeder is same as(true) %}
-         <p class="text-center"><strong>PRUEBA FEDERADA</strong></p>
+         <p class="text-center"><strong>COMPETICIÓN FEDERADA</strong></p>
          {% elseif com.esoficial is same as(true) %}
-         <p class="text-center"><strong>PRUEBA OFICIAL DEL CLUB</strong></p>
+         <p class="text-center"><strong>COMPETICIÓN OFICIAL DEL CLUB</strong></p>
          {% endif %}
          <a type="button" class="btn btn-m btn-default" href="../../competiciones"><span class="glyphicon glyphicon-menu-left"></span>Volver</a>
       </div>
