--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -19,14 +19,22 @@
 
 {% block container %}
    <h1 id="container_title" class="row page-header">Configuración de la aplicación</h1>
-   <div id="container_header" class="row">
-      <button id="btn_poblarbd" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="INSERT INTO ..."><span class="glyphicon glyphicon-save"></span> Poblar BD</button>
-      <button id="btn_borrarbd" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="DELETE FROM ..."><span class="glyphicon glyphicon-remove-circle"></span> Borrar datos BD</button>
-      <button id="btn_rehacerbd" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="doctrine:database:drop --force&#10;doctrine:database:create&#10;doctrine:schema:update --force&#10;doctrine:fixtures:load --append"><span class="glyphicon glyphicon-refresh"></span> Rehacer BD</button>
-      <button id="btn_limpiarcache" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="cache:clear&#10;cache:clear --env=prod"><span class="glyphicon glyphicon-trash"></span> Limpiar cache</button>
-      <button id="btn_asseticdump" class="btn btn-link inactive" data-toggle="tooltip" data-placement="bottom" title="assetic:dump"><span class="glyphicon glyphicon-refresh"></span> Assetic dump</button>
+   <ul class="nav nav-tabs">
+      <li id="navtab-tp" role="presentation" onClick="loadConfigContent('tp')"><a class="clickable">Tipos de pruebas</a></li>
+      <li id="navtab-oa" role="presentation" onClick="loadConfigContent('oa')"><a class="clickable">Opciones Avanzadas</a></li>
+   </ul>
+   <div class="row config-content">
+      <div id="tabcontent-tp" style="display:none">
+         FORMULARIO TIPOS DE PRUEBAS
+      </div>
+      <div id="tabcontent-oa" style="display:none">
+         <button id="btn_poblarbd" type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="INSERT INTO ..."><span class="glyphicon glyphicon-save"></span> Poblar BD</button>
+         <button id="btn_borrarbd" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="DELETE FROM ..."><span class="glyphicon glyphicon-remove-circle"></span> Borrar datos BD</button>
+         <button id="btn_rehacerbd" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="doctrine:database:drop --force&#10;doctrine:database:create&#10;doctrine:schema:update --force&#10;doctrine:fixtures:load --append"><span class="glyphicon glyphicon-refresh"></span> Rehacer BD</button>
+         <button id="btn_limpiarcache" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="cache:clear&#10;cache:clear --env=prod"><span class="glyphicon glyphicon-trash"></span> Limpiar cache</button>
+         <button id="btn_asseticdump" type="button" class="btn btn-default inactive" data-toggle="tooltip" data-placement="bottom" title="assetic:dump"><span class="glyphicon glyphicon-refresh"></span> Assetic dump</button>
+      </div>
    </div>
-   
    <div id="alert_div"> </div>
 
    
