--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -20,12 +20,20 @@
 {% block container %}
    <h1 id="container_title" class="row page-header">Configuración de la aplicación</h1>
    <ul class="nav nav-tabs">
-      <li id="navtab-tp" role="presentation" onClick="loadConfigContent('tp')"><a class="clickable">Tipos de pruebas</a></li>
-      <li id="navtab-oa" role="presentation" onClick="loadConfigContent('oa')"><a class="clickable">Opciones Avanzadas</a></li>
+      <li id="navtab-tp" role="presentation" onClick="toggleContent('tp')"><a class="clickable">Tipos de pruebas</a></li>
+      <li id="navtab-oa" role="presentation" onClick="toggleContent('oa')"><a class="clickable">Opciones Avanzadas</a></li>
    </ul>
    <div class="row config-content">
       <div id="tabcontent-tp" style="display:none">
-         FORMULARIO TIPOS DE PRUEBAS
+         <div class="row">
+            <a class="btn btn-primary" href="#"><span class="glyphicon glyphicon-plus"></span> Añadir</a>
+            <a id="btn_tprf-refresh" class="btn btn-default" onClick="loadViews()"><span class="glyphicon glyphicon-refresh"></span> Actualizar</a>
+         </div>
+         <div class="row">
+            <table id="tprf-table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
+            </table>
+         </div>
+         
       </div>
       <div id="tabcontent-oa" style="display:none">
          <button id="btn_poblarbd" type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="INSERT INTO ..."><span class="glyphicon glyphicon-save"></span> Poblar BD</button>
@@ -33,9 +41,10 @@
          <button id="btn_rehacerbd" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="doctrine:database:drop --force&#10;doctrine:database:create&#10;doctrine:schema:update --force&#10;doctrine:fixtures:load --append"><span class="glyphicon glyphicon-refresh"></span> Rehacer BD</button>
          <button id="btn_limpiarcache" type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="cache:clear&#10;cache:clear --env=prod"><span class="glyphicon glyphicon-trash"></span> Limpiar cache</button>
          <button id="btn_asseticdump" type="button" class="btn btn-default inactive" data-toggle="tooltip" data-placement="bottom" title="assetic:dump"><span class="glyphicon glyphicon-refresh"></span> Assetic dump</button>
+         
+         <div id="alert_div"> </div>
       </div>
    </div>
-   <div id="alert_div"> </div>
 
    
 {% endblock %}
