--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button id="modal-dismiss" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="modalLabel">{% block modallabel %}Mensaje{% endblock %}</h4></div>
       <div class="modal-body">
          {% block modalbody %}
@@ -30,7 +30,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">{% block modaldismiss %}Cancelar{% endblock %}</button>
-        {% block modalprimary %}<button type="button" class="btn btn-primary">Aceptar</button>{% endblock %}
+        {% block modalprimary %}<button type="button" class="btn btn-primary" href="#">Aceptar</button>{% endblock %}
       </div>
     </div>
   </div>
