Dialogo edicion tipos de pruebas

--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -31,7 +31,7 @@
       <div id="tabcontent-tp" style="display:none">
          <div class="row">
             <button type="button" class="btn btn-primary" onClick="showModal('newTPR', null, null, null)"><span class="glyphicon glyphicon-plus"></span> Añadir</button>
-            <button id="btn_tprf-refresh" class="btn btn-default" onClick="loadViews()"><span class="glyphicon glyphicon-refresh"></span> Actualizar</button>
+            <button class="btn btn-default updater" onClick="loadViews()"><span class="glyphicon glyphicon-refresh"></span> Actualizar</button>
          </div>
          <div class="row">
             <table id="tprf-table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
